for/antlr_files/forParser.py
# Generated from for.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class forParser ( Parser ):

    grammarFileName = "for.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'for'", "'if'", "'print'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'='", "'+'", "'-'", "'*'", 
                     "'/'", "'>'", "'<'", "'=='", "'!='", "'('", "')'", 
                     "'{'", "'}'", "';'" ]

    symbolicNames = [ "<INVALID>", "FOR", "IF", "PRINT", "ID", "NUM", "WS", 
                      "ASSIGN", "PLUS", "MINUS", "MULT", "DIV", "GT", "LT", 
                      "EQ", "NEQ", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "SEMI" ]

    RULE_programa = 0
    RULE_sentencia = 1
    RULE_asignacion = 2
    RULE_condicional = 3
    RULE_bucleFor = 4
    RULE_print = 5
    RULE_condicion = 6
    RULE_expresion = 7
    RULE_termino = 8
    RULE_factor = 9

    ruleNames =  [ "programa", "sentencia", "asignacion", "condicional", 
                   "bucleFor", "print", "condicion", "expresion", "termino", 
                   "factor" ]

    EOF = Token.EOF
    FOR=1
    IF=2
    PRINT=3
    ID=4
    NUM=5
    WS=6
    ASSIGN=7
    PLUS=8
    MINUS=9
    MULT=10
    DIV=11
    GT=12
    LT=13
    EQ=14
    NEQ=15
    LPAREN=16
    RPAREN=17
    LBRACE=18
    RBRACE=19
    SEMI=20

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(forParser.EOF, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(forParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(forParser.SentenciaContext,i)


        def getRuleIndex(self):
            return forParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = forParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 65598) != 0):
                self.state = 20
                self.sentencia()
                self.state = 25
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 26
            self.match(forParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asignacion(self):
            return self.getTypedRuleContext(forParser.AsignacionContext,0)


        def condicional(self):
            return self.getTypedRuleContext(forParser.CondicionalContext,0)


        def bucleFor(self):
            return self.getTypedRuleContext(forParser.BucleForContext,0)


        def print_(self):
            return self.getTypedRuleContext(forParser.PrintContext,0)


        def expresion(self):
            return self.getTypedRuleContext(forParser.ExpresionContext,0)


        def SEMI(self):
            return self.getToken(forParser.SEMI, 0)

        def getRuleIndex(self):
            return forParser.RULE_sentencia

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentencia" ):
                listener.enterSentencia(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentencia" ):
                listener.exitSentencia(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentencia" ):
                return visitor.visitSentencia(self)
            else:
                return visitor.visitChildren(self)




    def sentencia(self):

        localctx = forParser.SentenciaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sentencia)
        try:
            self.state = 35
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 28
                self.asignacion()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 29
                self.condicional()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 30
                self.bucleFor()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 31
                self.print_()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 32
                self.expresion()
                self.state = 33
                self.match(forParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(forParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(forParser.ASSIGN, 0)

        def expresion(self):
            return self.getTypedRuleContext(forParser.ExpresionContext,0)


        def SEMI(self):
            return self.getToken(forParser.SEMI, 0)

        def getRuleIndex(self):
            return forParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacion" ):
                return visitor.visitAsignacion(self)
            else:
                return visitor.visitChildren(self)




    def asignacion(self):

        localctx = forParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.match(forParser.ID)
            self.state = 38
            self.match(forParser.ASSIGN)
            self.state = 39
            self.expresion()
            self.state = 40
            self.match(forParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(forParser.IF, 0)

        def LPAREN(self):
            return self.getToken(forParser.LPAREN, 0)

        def condicion(self):
            return self.getTypedRuleContext(forParser.CondicionContext,0)


        def RPAREN(self):
            return self.getToken(forParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(forParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(forParser.RBRACE, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(forParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(forParser.SentenciaContext,i)


        def getRuleIndex(self):
            return forParser.RULE_condicional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicional" ):
                listener.enterCondicional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicional" ):
                listener.exitCondicional(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicional" ):
                return visitor.visitCondicional(self)
            else:
                return visitor.visitChildren(self)




    def condicional(self):

        localctx = forParser.CondicionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_condicional)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(forParser.IF)
            self.state = 43
            self.match(forParser.LPAREN)
            self.state = 44
            self.condicion()
            self.state = 45
            self.match(forParser.RPAREN)
            self.state = 46
            self.match(forParser.LBRACE)
            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 65598) != 0):
                self.state = 47
                self.sentencia()
                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 53
            self.match(forParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BucleForContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(forParser.FOR, 0)

        def LPAREN(self):
            return self.getToken(forParser.LPAREN, 0)

        def condicion(self):
            return self.getTypedRuleContext(forParser.CondicionContext,0)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(forParser.SEMI)
            else:
                return self.getToken(forParser.SEMI, i)

        def RPAREN(self):
            return self.getToken(forParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(forParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(forParser.RBRACE, 0)

        def asignacion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(forParser.AsignacionContext)
            else:
                return self.getTypedRuleContext(forParser.AsignacionContext,i)


        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(forParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(forParser.ExpresionContext,i)


        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(forParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(forParser.SentenciaContext,i)


        def getRuleIndex(self):
            return forParser.RULE_bucleFor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBucleFor" ):
                listener.enterBucleFor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBucleFor" ):
                listener.exitBucleFor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBucleFor" ):
                return visitor.visitBucleFor(self)
            else:
                return visitor.visitChildren(self)




    def bucleFor(self):

        localctx = forParser.BucleForContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_bucleFor)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(forParser.FOR)
            self.state = 56
            self.match(forParser.LPAREN)
            self.state = 62
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 57
                self.asignacion()
                pass

            elif la_ == 2:
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 65584) != 0):
                    self.state = 58
                    self.expresion()


                self.state = 61
                self.match(forParser.SEMI)
                pass


            self.state = 64
            self.condicion()
            self.state = 65
            self.match(forParser.SEMI)
            self.state = 68
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 66
                self.asignacion()

            elif la_ == 2:
                self.state = 67
                self.expresion()


            self.state = 70
            self.match(forParser.RPAREN)
            self.state = 71
            self.match(forParser.LBRACE)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 65598) != 0):
                self.state = 72
                self.sentencia()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 78
            self.match(forParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(forParser.PRINT, 0)

        def expresion(self):
            return self.getTypedRuleContext(forParser.ExpresionContext,0)


        def SEMI(self):
            return self.getToken(forParser.SEMI, 0)

        def getRuleIndex(self):
            return forParser.RULE_print

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint" ):
                listener.enterPrint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint" ):
                listener.exitPrint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint" ):
                return visitor.visitPrint(self)
            else:
                return visitor.visitChildren(self)




    def print_(self):

        localctx = forParser.PrintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_print)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(forParser.PRINT)
            self.state = 81
            self.expresion()
            self.state = 82
            self.match(forParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(forParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(forParser.ExpresionContext,i)


        def GT(self):
            return self.getToken(forParser.GT, 0)

        def LT(self):
            return self.getToken(forParser.LT, 0)

        def EQ(self):
            return self.getToken(forParser.EQ, 0)

        def NEQ(self):
            return self.getToken(forParser.NEQ, 0)

        def getRuleIndex(self):
            return forParser.RULE_condicion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicion" ):
                listener.enterCondicion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicion" ):
                listener.exitCondicion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicion" ):
                return visitor.visitCondicion(self)
            else:
                return visitor.visitChildren(self)




    def condicion(self):

        localctx = forParser.CondicionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_condicion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.expresion()
            self.state = 85
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 61440) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 86
            self.expresion()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpresionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def termino(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(forParser.TerminoContext)
            else:
                return self.getTypedRuleContext(forParser.TerminoContext,i)


        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(forParser.PLUS)
            else:
                return self.getToken(forParser.PLUS, i)

        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(forParser.MINUS)
            else:
                return self.getToken(forParser.MINUS, i)

        def getRuleIndex(self):
            return forParser.RULE_expresion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpresion" ):
                listener.enterExpresion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpresion" ):
                listener.exitExpresion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpresion" ):
                return visitor.visitExpresion(self)
            else:
                return visitor.visitChildren(self)




    def expresion(self):

        localctx = forParser.ExpresionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_expresion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.termino()
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8 or _la==9:
                self.state = 89
                _la = self._input.LA(1)
                if not(_la==8 or _la==9):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 90
                self.termino()
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TerminoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(forParser.FactorContext)
            else:
                return self.getTypedRuleContext(forParser.FactorContext,i)


        def MULT(self, i:int=None):
            if i is None:
                return self.getTokens(forParser.MULT)
            else:
                return self.getToken(forParser.MULT, i)

        def DIV(self, i:int=None):
            if i is None:
                return self.getTokens(forParser.DIV)
            else:
                return self.getToken(forParser.DIV, i)

        def getRuleIndex(self):
            return forParser.RULE_termino

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTermino" ):
                listener.enterTermino(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTermino" ):
                listener.exitTermino(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTermino" ):
                return visitor.visitTermino(self)
            else:
                return visitor.visitChildren(self)




    def termino(self):

        localctx = forParser.TerminoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_termino)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.factor()
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10 or _la==11:
                self.state = 97
                _la = self._input.LA(1)
                if not(_la==10 or _la==11):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 98
                self.factor()
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self):
            return self.getToken(forParser.NUM, 0)

        def ID(self):
            return self.getToken(forParser.ID, 0)

        def LPAREN(self):
            return self.getToken(forParser.LPAREN, 0)

        def expresion(self):
            return self.getTypedRuleContext(forParser.ExpresionContext,0)


        def RPAREN(self):
            return self.getToken(forParser.RPAREN, 0)

        def getRuleIndex(self):
            return forParser.RULE_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactor" ):
                listener.enterFactor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactor" ):
                listener.exitFactor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFactor" ):
                return visitor.visitFactor(self)
            else:
                return visitor.visitChildren(self)




    def factor(self):

        localctx = forParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_factor)
        try:
            self.state = 110
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.match(forParser.NUM)
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.match(forParser.ID)
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 3)
                self.state = 106
                self.match(forParser.LPAREN)
                self.state = 107
                self.expresion()
                self.state = 108
                self.match(forParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





